# repocoder-agent

./: .gitignore  README.md  pyproject.toml
.repocoder/skills/python-bugfix/: SKILL.md  metadata.json
app/repocoder_agent/: __init__.py  __main__.py  agent.py  autofix.py  cli.py  config.py  executor.py  llm_client.py  main.py  models.py  patcher.py  planner.py  repository.py  sandbox.py  tracing.py
app/repocoder_agent/agents/: __init__.py  patch_reviewer_agent.py  planner_agent.py  repo_explorer_agent.py
app/repocoder_agent/critics/: __init__.py  patch_critic.py
app/repocoder_agent/hooks/: __init__.py  manager.py
app/repocoder_agent/memory/: __init__.py  graph_builder.py  graph_store.py  history_store.py
app/repocoder_agent/policies/: __init__.py  uncertainty_gate.py
app/repocoder_agent/retrieval/: __init__.py  hybrid_retriever.py
app/repocoder_agent/selectors/: __init__.py  patch_selector.py
app/repocoder_agent/skills/: __init__.py  loader.py
app/repocoder_agent/tools/: __init__.py  mcp_client.py  mcp_config.py  registry.py
scripts/: example_run.py
tests/: test_agent_autofix.py  test_api.py  test_cli.py  test_cli_mcp.py  test_graph_builder.py  test_graph_store.py  test_history_store.py  test_hooks.py  test_hybrid_retriever.py  test_hybrid_retriever_history.py  test_llm_integration.py  test_mcp_config.py  test_mcp_runtime.py  test_patch_critic.py  test_patch_selection.py  test_patcher.py  test_plan_mode.py  test_repository.py  test_sandbox.py  test_skills.py  test_subagents.py  test_tools.py  test_uncertainty_gate.py
(+5 files in other folders)
