[project]
name = "repocoder-agent"
version = "0.1.0"
description = "A lightweight coding agent MVP for real repositories."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "openai>=1.30.0",
  "mcp>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
repocoder = "repocoder_agent.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
addopts = "-q --basetemp=./.pytest_tmp_local -p no:cacheprovider"
